--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -260,7 +260,6 @@ font-family: 'Times New Roman', Times, serif;
     flex-wrap: wrap;
     position: absolute;
     border-left: $border-dark;
-    transition: 0.2s transform, 0.2s width;
     transform: translateX(0);
     *{
         transition: 0s all !important;
@@ -336,7 +335,7 @@ font-family: 'Times New Roman', Times, serif;
     transform: translateY(200px) !important;
 }
 .enlargeContainer{
-    height: calc(100% - 50px);
+    height: calc(100% - 49px);
     width: 1px;
     position: absolute;
     display: flex;
@@ -347,7 +346,6 @@ font-family: 'Times New Roman', Times, serif;
     transform: translateX(100%);
     right: 0;
     background-color: white;
-    border-left: $border-dark;
     justify-content: center;
     position: absolute;
 }
@@ -509,23 +507,124 @@ font-family: 'Times New Roman', Times, serif;
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
 }
-.ArtworkInfo-container{
-    position: absolute;
-    max-height: 100%;
-    z-index: 2;
-    transition: 0.2s all;
-    bottom: -100%;
-    background-color: $frame-color;
-    color: white;
+
+.Tags-item_wrapper{
     display: flex;
     flex-wrap: wrap;
+    // margin: 1vw 2vw;
+    // margin-top: 0;
+    margin: 20px;
     justify-content: flex-end;
-    overflow-y: auto;
-    right: 0;
-
-    border-top: $border-dark;
-    overflow: hidden;
+    
+}
+.Tags-item_container{
+    border: 1px solid black;
+    padding: 4px 7px 7px 7px;
+    margin: 2px 3px;
+    cursor: pointer;
+}
+.Tags-item_container:hover{
+    transform: scale(1.1);
+}
+.Tags-item_text{
+    font-size: 12px;
+    font-weight: 600;
+    white-space: nowrap;
+}
+.full-height{
+    height: 100% !important;
+}
+.show-menu-desktop{
+    transform: translateX(-100%);
+    width: 0;
+}
+.enlarge-preview{
+    // object-fit: contain;
+    height: 100%;
+    width: 100%;
+}
+.about-container{
+    width: 100%;
+    position: relative;
+    display: flex;
+    border-bottom: 1px solid !important;
+    background-color: blue;
+    border-top: 1px solid;
+    cursor: pointer;
+}
+.about-image{
+    width: 50%;
+}
+.TagsMenu-close{
+    width: 100%;
+    position: sticky;
+    bottom: 0;
+}
+.dark-bg{
+    background-color: black;
+    display: flex;
+    align-items: center;
+}
+.white-font{
+    color: white;
+    font-weight: bold;
+    padding-left: 5px;
+    white-space: nowrap;
+}
+.halfSize{
+    max-width: 50%;
+    min-width: 45px;
+}
+.enlarge-info{
+    position: absolute;
+    height: 50px;
+    width: 100%;
+    bottom: -50px;
+    background-color: yellow;
+}
+.previewBubble-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 9999;
+    border: 1px solid black;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+}
+.previewBubble-wrapper{
+    padding: 0 5px 0 0;
+    display: flex;
+    position: absolute;
+    left: 0;
+    overflow-x: auto;
+}
+.previewBubble{
+    height: 30px;
+    width: 30px;
+    border-radius: 999px;
+    margin: 5px;
+    flex: 1 1 15px;
+    cursor: pointer;
+    min-width: 30px;
+    max-width: 30px;
+    opacity: 0.8;
+    // background-color: rgb(192, 192, 192);
+    border: 2px solid black;
+}
+.ArtworkInfo-container{
+    transform: translateY(100%);
+    transition: 0.2s transform, .4s opacity;
+    position: absolute;
+    border-top: 1px solid black;
+    border-left: 1px solid;
+    background-color: white;
     width: 100% !important;
+}
+.info-up{
+    // bottom: 50px;
+    transform: translateY(-100%);
 }
 .ArtworkInfo-wrapper{
     width: 100%;
@@ -601,121 +700,6 @@ font-family: 'Times New Roman', Times, serif;
 .ArtworkInfo_locationYear{
     font-size: 12px;
     // margin-top: 10px;
-}
-.Tags-item_wrapper{
-    display: flex;
-    flex-wrap: wrap;
-    // margin: 1vw 2vw;
-    // margin-top: 0;
-    margin: 20px;
-    justify-content: flex-end;
-    
-}
-.Tags-item_container{
-    border: 1px solid black;
-    padding: 4px 7px 7px 7px;
-    margin: 2px 3px;
-    cursor: pointer;
-}
-.Tags-item_container:hover{
-    transform: scale(1.1);
-}
-.Tags-item_text{
-    font-size: 12px;
-    font-weight: 600;
-    white-space: nowrap;
-}
-
-.info-up{
-    opacity: 1;
-    bottom: 0;
-
-}
-.info-down{
-    bottom: -100%;
-    cursor: default;
-}
-
-.full-height{
-    height: 100% !important;
-}
-.show-menu-desktop{
-    transform: translateX(-100%);
-    width: 0;
-}
-.enlarge-preview{
-    // object-fit: contain;
-    height: 100%;
-    width: 100%;
-}
-.about-container{
-    width: 100%;
-    position: relative;
-    display: flex;
-    border-bottom: 1px solid !important;
-    background-color: blue;
-    border-top: 1px solid;
-    cursor: pointer;
-}
-.about-image{
-    width: 50%;
-}
-.TagsMenu-close{
-    width: 100%;
-    position: sticky;
-    bottom: 0;
-}
-.dark-bg{
-    background-color: black;
-    display: flex;
-    align-items: center;
-}
-.white-font{
-    color: white;
-    font-weight: bold;
-    padding-left: 5px;
-    white-space: nowrap;
-}
-.halfSize{
-    max-width: 50%;
-    min-width: 45px;
-}
-.previewBubble{
-    height: 30px;
-    width: 30px;
-    border-radius: 999px;
-    margin: 5px;
-    flex: 1 1 15px;
-    cursor: pointer;
-    min-width: 30px;
-    max-width: 30px;
-    opacity: 0.8;
-    // background-color: rgb(192, 192, 192);
-    border: 2px solid black;
-}
-// .previewBubble-filled{
-//     background-color: $checkedcolor;
-// }
-.previewBubble-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    // bottom: 2px;
-    z-index: 9999;
-    width: calc(100% + 2px);
-    bottom: -50px;
-    border: 1px solid black;
-    border-bottom: 0;
-    background-color: white;
-    height: 50px;
-}
-.previewBubble-wrapper{
-    padding: 0 5px 0 0;
-    display: flex;
-    position: absolute;
-    left: 0;
-    overflow-x: auto;
 }
 .clickable{
     cursor: pointer;
@@ -1012,10 +996,6 @@ font-family: 'Times New Roman', Times, serif;
     justify-content: flex-end;
     width: 100%;
 }
-.info-up{
-    bottom: 0;
-}
-
 .checkbox-selected .title-letter{
     color: white;
 }
@@ -1036,8 +1016,10 @@ font-family: 'Times New Roman', Times, serif;
     height: 100% !important;
     width: 100%;
     background-color: yellow;
+    border-left: 1px solid;
 }
 .pinch-to-zoom-area{
+    transition: transform 0.2s cubic-bezier(0.1, 0.57, 0.1, 1) 0s !important;
     height: 100%;
     display: flex !important;
     align-items: center;
@@ -1153,9 +1135,6 @@ font-family: 'Times New Roman', Times, serif;
     .TagsMenu-hamburger *{
         padding: 0 !important;
         color: black !important;
-    }
-    .info-up{
-        bottom: 0;
     }
     .FamilyList--detail__image{
         width: 100%;
@@ -1322,25 +1301,6 @@ font-family: 'Times New Roman', Times, serif;
     .Nav-infoButton-icon{
         height: 75%;
     }
-    .ArtworkInfo-container{
-        display: none;
-        // padding-bottom: 22px;
-        min-height: 121px;
-        max-height: 100%;
-        overflow-y: auto;
-        border-left: none;
-        z-index: 999;
-        transition: 0.2s transform, .4s opacity;
-        position: absolute;
-        bottom: -90px;
-        transform: translateY(100%);
-        overflow: visible;
-        bottom: -91px;
-        border-top: 1px solid black;
-    }
-    .ArtworkInfo-toggleTags{
-        bottom: 0px !important;
-    }
     .show{
         border-bottom: 0px !important;
         bottom: -91px;
@@ -1390,11 +1350,6 @@ font-family: 'Times New Roman', Times, serif;
         height: 100% !important;
         min-width: 0 !important;
     }
-    .info-up{
-        opacity: 1;
-        transform: translateY(0);
-        border-top: 1px solid black;
-    }
     .show{
         display: flex;
     }
@@ -1420,6 +1375,9 @@ font-family: 'Times New Roman', Times, serif;
     #themes-subcategories{
         max-height: 40vh;
         overflow-y: auto;
+    }
+    .ArtworkInfo-toggleTags{
+        bottom: 0px !important;
     }
     
   }
