--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -408,15 +408,9 @@ label {
 }
 
 .enlargeContainer {
-  height: calc(100% - 49px);
+  height: 100% !important;
   width: 1px;
   position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   max-width: 100%;
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
@@ -430,6 +424,12 @@ label {
       -ms-flex-pack: center;
           justify-content: center;
   position: absolute;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 100%;
+      grid-template-columns: 100%;
+  -ms-grid-rows: 1fr 50px;
+      grid-template-rows: 1fr 50px;
 }
 
 .enlarge-border {
@@ -476,6 +476,7 @@ label {
           align-items: center;
   height: 100%;
   width: 100%;
+  max-height: 100%;
 }
 
 .foreground-transition {
@@ -792,9 +793,9 @@ label {
 
 .enlarge-info {
   position: absolute;
-  height: 50px;
+  height: 51px;
   width: 100%;
-  bottom: -50px;
+  bottom: -1px;
   background-color: yellow;
 }
 
@@ -812,7 +813,7 @@ label {
   z-index: 9999;
   border: 1px solid black;
   background-color: white;
-  height: 100%;
+  height: 50px;
   width: 100%;
 }
 
@@ -842,12 +843,18 @@ label {
 }
 
 .ArtworkInfo-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
-  -webkit-transition: .4s opacity, 0.2s -webkit-transform;
-  transition: .4s opacity, 0.2s -webkit-transform;
-  transition: 0.2s transform, .4s opacity;
-  transition: 0.2s transform, .4s opacity, 0.2s -webkit-transform;
+  -webkit-transition: .4s opacity, 0.2s -webkit-transform !important;
+  transition: .4s opacity, 0.2s -webkit-transform !important;
+  transition: 0.2s transform !important, .4s opacity;
+  transition: 0.2s transform !important, .4s opacity, 0.2s -webkit-transform !important;
   position: absolute;
   border-top: 1px solid black;
   border-left: 1px solid;
@@ -987,10 +994,6 @@ label {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.show {
-  border-bottom: 0px !important;
 }
 
 .subcateogry_empty {
@@ -1158,13 +1161,6 @@ label {
           flex: 1;
   cursor: pointer;
   width: 100%;
-}
-
-.scroll-down {
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
-  opacity: 1 !important;
-  border-top: none;
 }
 
 .scroll-down-listitem {
@@ -1451,8 +1447,12 @@ label {
     display: -ms-flexbox;
     display: flex;
     height: 100%;
+    position: absolute;
+    bottom: 50px;
   }
   .controls {
+    position: absolute;
+    right: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1476,14 +1476,17 @@ label {
   .controls-exitButton {
     border-left: 1px solid;
   }
+  .controls-slideButton {
+    border-left: 1px solid;
+  }
   .previewBubble-container {
     position: relative;
-    -ms-grid-row: 2;
-        grid-row-start: 2;
-    border: 1px solid black;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    height: 100%;
+    border: none;
+    max-width: calc(100% - 100px);
   }
   .previewBubble-wrapper {
     position: initial;
@@ -1596,9 +1599,6 @@ label {
   }
   .images-container {
     position: absolute;
-    -ms-grid-row: 1;
-        grid-row-start: 1;
-    grid-row-end: 2;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 100%;
@@ -1607,10 +1607,7 @@ label {
         grid-template-rows: -webkit-min-content 1fr;
         grid-template-rows: min-content 1fr;
     overflow: hidden;
-    border-left: 1px solid;
-    border-right: 1px solid;
-    border-top: 1px solid;
-    border-bottom: 0;
+    border: 1px solid;
   }
   .imageSelect-container {
     -ms-grid-column: 1;
@@ -1627,7 +1624,7 @@ label {
     border-right: none;
     border-left: none;
     border-top: none;
-    height: 100%;
+    height: calc(100% - 49px);
     z-index: 0;
   }
   .imageSelect-slide {
@@ -1643,43 +1640,61 @@ label {
     border-top: 1px solid;
     height: 90px;
     overflow-y: hidden;
+    border-top: 0;
   }
   .enlargeContainer {
     background-color: white !important;
-    -ms-grid-column: 1;
-        grid-column-start: 1;
-    grid-column-end: 2;
-    -ms-grid-row: 1;
-        grid-row-start: 1;
-    grid-row-end: 2;
     width: 100% !important;
-    height: 100%;
+    height: calc(100% - 90px) !important;
     max-height: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -webkit-transform: translateY(-100%);
-            transform: translateY(-100%);
     z-index: 999;
-    background-color: rgba(0, 0, 0, 0);
     border-top: none;
     border-bottom: none;
     z-index: 1;
-    grid-row-start: 1;
-    grid-row-end: 2;
     border-left: none;
-    overflow: visible;
-    -webkit-transition: 0.2s height, 0.2s width, 0.2s opacity, 0.2s -webkit-transform;
-    transition: 0.2s height, 0.2s width, 0.2s opacity, 0.2s -webkit-transform;
-    transition: 0.2s height, 0.2s width, 0.2s transform, 0.2s opacity;
-    transition: 0.2s height, 0.2s width, 0.2s transform, 0.2s opacity, 0.2s -webkit-transform;
+    -webkit-transform: none;
+            transform: none;
+    overflow: hidden;
+    bottom: calc(100% - 49px);
   }
-  #foreground, #background {
-    max-height: 100%;
-    height: auto;
+  .enlarge-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    bottom: 0;
+  }
+  .previewBubble-container, .controls {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+  }
+  .info-up {
+    display: initial;
+    border-left: none;
+  }
+  .pinch-to-zoom-container {
+    display: none;
+    border: none;
+  }
+  .enlarge-scroll-down {
+    display: -ms-grid;
+    display: grid;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    top: 0;
+  }
+  .enlarge-scroll-down .pinch-to-zoom-container {
+    display: initial;
+  }
+  .scroll-down {
+    top: 0;
+    opacity: 1 !important;
+    border-top: none;
   }
   .Navbar {
     position: relative;
@@ -1737,10 +1752,6 @@ label {
   .Nav-infoButton-icon {
     height: 75%;
   }
-  .show {
-    border-bottom: 0px !important;
-    bottom: -91px;
-  }
   .imageSelect-FilePreview {
     -ms-flex-item-align: start;
         align-self: flex-start;
@@ -1793,11 +1804,6 @@ label {
     height: 100% !important;
     min-width: 0 !important;
   }
-  .show {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
   .side-scroll img {
     height: 90px;
   }
@@ -1813,10 +1819,6 @@ label {
     -webkit-transform: translateY(100%);
             transform: translateY(100%);
   }
-  .enlarge-scroll-down {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
   .foreground-transition {
     -webkit-transition: opacity 0.4s, height 0.2s, width 0.2s;
     transition: opacity 0.4s, height 0.2s, width 0.2s;
@@ -1824,9 +1826,6 @@ label {
   #themes-subcategories {
     max-height: 40vh;
     overflow-y: auto;
-  }
-  .ArtworkInfo-toggleTags {
-    bottom: 0px !important;
   }
 }
 /*# sourceMappingURL=frontEndMain.css.map */
