--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -1,3 +1,100 @@
+.FilterTree-list {
+  list-style: none;
+  padding: 0;
+}
+
+.FilterTree-listItems, .FilterTree-subcategories {
+  padding: 15px 5px 5px 15px;
+}
+
+.FilterTree-container {
+  height: 100%;
+  width: 300px;
+  overflow-y: auto;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.FilterTree-subcategories {
+  padding: 0;
+}
+
+.FilterTree-subcategory_item {
+  padding: 0 0 5px 15px;
+  position: relative;
+  border-left: 1px solid;
+}
+
+.FilterTree-title {
+  position: relative;
+}
+
+.FilterTree-item_listItem {
+  position: relative;
+  padding-left: 15px;
+  border-left: 1px solid;
+}
+
+.FilterTree-item_listItem::before {
+  content: "";
+  width: 15px;
+  height: 1px;
+  background-color: black;
+  position: absolute;
+  top: 50%;
+  left: 0;
+}
+
+.FilterTree-title::before {
+  content: "";
+  width: 15px;
+  height: 1px;
+  background-color: black;
+  position: absolute;
+  top: 50%;
+  left: -15px;
+}
+
+.FilterTree-listItems::before {
+  content: "";
+  width: 15px;
+  height: 1px;
+  background-color: black;
+  position: absolute;
+  top: 50%;
+  left: -15px;
+}
+
+.FilterTree-item_listItem:last-child {
+  border-left: 0;
+}
+
+.FilterTree-subcategory_item:last-child {
+  border-left: 0;
+}
+
+.FilterTree-item_listItem:last-child::after {
+  content: "";
+  width: 1px;
+  height: 12px;
+  background-color: black;
+  position: absolute;
+  left: 0;
+}
+
+.FilterTree-subcategory_item:last-child::after {
+  content: "";
+  width: 1px;
+  height: 12px;
+  background-color: black;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.FilterTree-listItems {
+  padding: 0;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -430,6 +527,7 @@ label {
       grid-template-columns: 100%;
   -ms-grid-rows: 1fr 50px;
       grid-template-rows: 1fr 50px;
+  border-left: 1px solid black;
 }
 
 .enlarge-border {
@@ -480,8 +578,8 @@ label {
 }
 
 .foreground-transition {
-  -webkit-transition: height 0.2s, width 0.2s, opacity 0.7s;
-  transition: height 0.2s, width 0.2s, opacity 0.7s;
+  -webkit-transition: height 0.2s, width 0.2s, opacity 0.4s;
+  transition: height 0.2s, width 0.2s, opacity 0.4s;
 }
 
 .imageSelect-FilePreview {
@@ -714,8 +812,9 @@ label {
 }
 
 .Tags-item_container {
+  font-family: 'Courier New', Courier, monospace;
   border: 1px solid black;
-  padding: 4px 7px 7px 7px;
+  padding: 4px 7px 2px 7px;
   margin: 2px 3px;
   cursor: pointer;
 }
@@ -793,9 +892,9 @@ label {
 
 .enlarge-info {
   position: absolute;
-  height: 51px;
+  height: 50px;
   width: 100%;
-  bottom: -1px;
+  bottom: 0;
   background-color: yellow;
 }
 
@@ -813,8 +912,10 @@ label {
   z-index: 9999;
   border: 1px solid black;
   background-color: white;
-  height: 50px;
+  height: 100%;
   width: 100%;
+  border-left: 0;
+  border-bottom: 0;
 }
 
 .previewBubble-wrapper {
@@ -857,7 +958,6 @@ label {
   transition: 0.2s transform !important, .4s opacity, 0.2s -webkit-transform !important;
   position: absolute;
   border-top: 1px solid black;
-  border-left: 1px solid;
   background-color: white;
   width: 100% !important;
 }
@@ -1367,8 +1467,6 @@ label {
 .pinch-to-zoom-container {
   height: 100% !important;
   width: 100%;
-  background-color: yellow;
-  border-left: 1px solid;
 }
 
 .pinch-to-zoom-area {
