--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -1,3 +1,5 @@
+@import './components/FilterTree';
+
 *{
     margin:0;
     padding: 0;
@@ -349,6 +351,7 @@ font-family: 'Times New Roman', Times, serif;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 1fr 50px;
+    border-left: 1px solid black;
 }
 .enlarge-border{
     position: absolute;
@@ -384,7 +387,7 @@ font-family: 'Times New Roman', Times, serif;
     max-height: 100%;
 }
 .foreground-transition{
-    transition: height 0.2s, width 0.2s, opacity 0.7s;
+    transition: height 0.2s, width 0.2s, opacity 0.4s;
 }
 
 .imageSelect-FilePreview{
@@ -520,8 +523,9 @@ font-family: 'Times New Roman', Times, serif;
     
 }
 .Tags-item_container{
+    font-family: 'Courier New', Courier, monospace;
     border: 1px solid black;
-    padding: 4px 7px 7px 7px;
+    padding: 4px 7px 2px 7px;
     margin: 2px 3px;
     cursor: pointer;
 }
@@ -579,9 +583,9 @@ font-family: 'Times New Roman', Times, serif;
 }
 .enlarge-info{
     position: absolute;
-    height: 51px;
+    height: 50px;
     width: 100%;
-    bottom: -1px;
+    bottom: 0;
     background-color: yellow;
 }
 .previewBubble-container{
@@ -592,8 +596,10 @@ font-family: 'Times New Roman', Times, serif;
     z-index: 9999;
     border: 1px solid black;
     background-color: white;
-    height: 50px;
+    height: 100%;
     width: 100%;
+    border-left: 0;
+    border-bottom: 0;
 }
 .previewBubble-wrapper{
     padding: 0 5px 0 0;
@@ -622,7 +628,6 @@ font-family: 'Times New Roman', Times, serif;
     transition: 0.2s transform !important, .4s opacity;
     position: absolute;
     border-top: 1px solid black;
-    border-left: 1px solid;
     background-color: white;
     width: 100% !important;
 }
@@ -994,8 +999,6 @@ font-family: 'Times New Roman', Times, serif;
 .pinch-to-zoom-container{
     height: 100% !important;
     width: 100%;
-    background-color: yellow;
-    border-left: 1px solid;
 }
 .pinch-to-zoom-area{
     transition: transform 0.2s cubic-bezier(0.1, 0.57, 0.1, 1) 0s !important;
