--- a/client/src/css/components/_FilterTree.scss
+++ b/client/src/css/components/_FilterTree.scss
@@ -1,20 +1,13 @@
 .FilterTree-list{
     list-style: none;
     padding: 0;
-}
-.FilterTree-listItems, .FilterTree-subcategories{
-    padding: 15px 5px 5px 15px;
+    padding-left: 7px;
 }
 .FilterTree-container{
     height: 100%;
     width: 300px;
     overflow-y: auto;
     font-family: 'Courier New', Courier, monospace;
-}
-.FilterTree-category{
-}
-.FilterTree-subcategories{
-    padding: 0;
 }
 .FilterTree-subcategory_item{
     padding: 0 0 5px 15px;
@@ -23,54 +16,29 @@
 }
 .FilterTree-title{
     position: relative;
+    margin-left: 28px;
 }
 .FilterTree-item_listItem{
     position: relative;
     padding-left: 15px;
     border-left: 1px solid;
 }
-.FilterTree-item_listItem::before{
+.FilterTree-item_listItem::before,
+.FilterTree-subcategory_item::before{
     content: "";
-    width: 15px;
+    width: 16px;
     height: 1px;
     background-color: black;
     position: absolute;
-    top: 50%;
+    top: 12px;
     left: 0;
-    // left: -15px;
 }
-.FilterTree-title::before{
-    content: "";
-    width: 15px;
-    height: 1px;
-    background-color: black;
-    position: absolute;
-    top: 50%;
-    left: -15px;
-}
-.FilterTree-listItems::before{
-    content: "";
-    width: 15px;
-    height: 1px;
-    background-color: black;
-    position: absolute;
-    top: 50%;
-    left: -15px;
-}
-.FilterTree-item_listItem:last-child{
-    border-left: 0;
-}
+.FilterTree-item_listItem:last-child, 
 .FilterTree-subcategory_item:last-child{
     border-left: 0;
+    padding-left: 16px;
 }
-.FilterTree-item_listItem:last-child::after{
-    content: "";
-    width: 1px;
-    height: 12px;
-    background-color: black;
-    position: absolute;
-    left: 0;
-}
+.FilterTree-item_listItem:last-child::after,
 .FilterTree-subcategory_item:last-child::after{
     content: "";
     width: 1px;
@@ -80,6 +48,50 @@
     left: 0;
     top: 0;
 }
-.FilterTree-listItems{
-    padding: 0;
+.FilterTree-item_listItem:first-child::after,
+.FilterTree-subcategory_item:first-child::after{
+    content: "";
+    width: 1px;
+    height: 18px;
+    background-color: black;
+    position: absolute;
+    left: -1px;
+    top: -5px;
 }
+.FilterTree-form{
+    position: relative;
+    display: flex !important;
+    justify-content: space-between !important;
+}
+.styledCheckbox-container{
+    display: block;
+    position: absolute;
+    cursor: pointer;
+    overflow: hidden;
+    height: 16px;
+    width: 16px;
+    top: 4px;
+}
+.styledCheckbox-checkbox{
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+    right: 0;
+}
+.styleCheckbox-checkmark{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    border: solid black;
+    border-width: 1px;
+}
+.checkbox-selected{
+        background-color: #e6e6e6 !important;
+    }
+    .styledCheckbox-container input:checked ~ .styleCheckbox-checkmark {
+        background-color: #e6e6e6 !important;
+      }
