--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -20,6 +20,45 @@
 .FilterTree-title {
   position: relative;
   margin-left: 28px;
+  width: 100%;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.FilterTree-form {
+  position: relative;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-pack: justify !important;
+      -ms-flex-pack: justify !important;
+          justify-content: space-between !important;
+  border-bottom: 1px solid rgba(0, 0, 0, 0);
+}
+
+.FilterTree-form:hover {
+  background-color: rgba(0, 0, 0, 0.03);
+  border-bottom: 1px dotted black;
+}
+
+.FilterTree-caret {
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+  opacity: 0.1;
+}
+
+.FilterTree-form:hover .FilterTree-caret {
+  opacity: 0.1;
+}
+
+.FilterTree-caret:hover {
+  opacity: 0.3 !important;
 }
 
 .FilterTree-item_listItem {
@@ -65,16 +104,6 @@
   position: absolute;
   left: -1px;
   top: -5px;
-}
-
-.FilterTree-form {
-  position: relative;
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
-  -webkit-box-pack: justify !important;
-      -ms-flex-pack: justify !important;
-          justify-content: space-between !important;
 }
 
 .styledCheckbox-container {
