--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -2,6 +2,9 @@
   list-style: none;
   padding: 0;
   padding-left: 7px;
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+  overflow: hidden;
 }
 
 .FilterTree-container {
@@ -44,21 +47,6 @@
 .FilterTree-form:hover {
   background-color: rgba(0, 0, 0, 0.03);
   border-bottom: 1px dotted black;
-}
-
-.FilterTree-caret {
-  width: 24px;
-  height: 24px;
-  margin-right: 5px;
-  opacity: 0.1;
-}
-
-.FilterTree-form:hover .FilterTree-caret {
-  opacity: 0.1;
-}
-
-.FilterTree-caret:hover {
-  opacity: 0.3 !important;
 }
 
 .FilterTree-item_listItem {
@@ -133,14 +121,36 @@
   width: 100%;
   border: solid black;
   border-width: 1px;
-}
-
-.checkbox-selected {
-  background-color: #e6e6e6 !important;
+  background-color: #ffffff;
 }
 
 .styledCheckbox-container input:checked ~ .styleCheckbox-checkmark {
   background-color: #e6e6e6 !important;
+}
+
+.FilterTree-caret {
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+  opacity: 0;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.FilterTree-form:hover .FilterTree-caret {
+  opacity: 0.1;
+}
+
+.FilterTree-caret:hover {
+  opacity: 0.3 !important;
+}
+
+.FilterTree-caret_down {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 * {
